# InternetTechnologies

./: README.md
Chat/: CMakeLists.txt  ChatMessage.h  Client.cpp  ColorStreams.h  Colors.h  Room.h  Server.cpp  Session.h  Strings.h  User.h  main.cpp
MagneetMusic/: .firebaserc  package-lock.json  package.json
MagneetMusic/public/: index.html  index.js
MagneetMusic/public/css/: authHeader.css  style.css
MagneetMusic/public/tools/: DatabaseHelper.js  Utils.js
MagneetMusic/public/views/components/: Header.js  Player.js
MagneetMusic/public/views/pages/: AlbumPage.js  ArtistPage.js  Error404.js  Home.js  LibraryPage.js  LoginPage.js  RegisterPage.js  SearchPage.js
MagneetMusic/src/assets/css/: albumPage.css  albums.css  artists.css  audioPlayer.css  auth.css  authHeader.css  baseSettings.css  headerNavigation.css  navigation.css  player.css  sections.css  text.css
MagneetMusic/src/views/: albumPage.html  authorization.html  index.html  registration.html
